--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     :root {
-      --input-width: 120px;
+      --input-width: 140px;
     }
 
     body {
@@ -101,8 +101,8 @@
     }
 
     .flower {
-      width: 100px;
-      margin-top: auto;
+      width: 200px;
+      margin-bottom: 40px;
     }
   </style>
 </head>
