--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
       font-family: 'HelveticaMono', monospace;
       font-size: 14px;
       padding: 0px 0px;
+      line-height: 1em; /* eller 1 */
+      vertical-align: middle;
       cursor: pointer;
       transition: all 0.3s ease;
     }
