--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       margin-right: 10px;
     }
 
-   button {
+ button {
   background: transparent;
   border: 1px solid black;
   color: black;
@@ -85,6 +85,10 @@
   vertical-align: middle;
   cursor: pointer;
   transition: all 0.3s ease;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100%; /* eller sätt en exakt höjd */
 }
 
     button.clicked {
