--- a/index.html
+++ b/index.html
@@ -74,21 +74,17 @@
       margin-right: 10px;
     }
 
- button {
+button {
   background: transparent;
   border: 1px solid black;
   color: black;
   font-family: 'HelveticaMono', monospace;
   font-size: 14px;
-  padding: 0; /* Inget extra utrymme runt texten */
-  line-height: 14px; /* Samma som font-size för exakt höjd */
+  padding: 1px;
+  line-height: 14px;
   vertical-align: middle;
   cursor: pointer;
   transition: all 0.3s ease;
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100%; /* eller sätt en exakt höjd */
 }
 
     button.clicked {
