--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ button {
   font-family: 'HelveticaMono', monospace;
   font-size: 14px;
   padding: 1px;
-  line-height: 14px;
-  vertical-align: middle;
+  line-height: 1;
+  display: inline-block;
+  vertical-align: bottom;
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
     button.clicked {
       background: black;
       color: #F0EDE6;
