--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@ button {
   color: black;
   font-family: 'HelveticaMono', monospace;
   font-size: 14px;
-  padding: 1px;
+  padding: 1px 2px;
   line-height: 1;
   display: inline-block;
-  vertical-align: bottom;
+  vertical-align: middle;
   cursor: pointer;
   transition: all 0.3s ease;
+  text-align: center;
 }
     button.clicked {
       background: black;
