--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ button {
   color: black;
   font-family: 'HelveticaMono', monospace;
   font-size: 17px;
-  padding: 1; /* Inga extra pixlar runt texten */
+  padding: 2px; /* Inga extra pixlar runt texten */
   line-height: 1; /* Tätsittande radavstånd */
   height: 100%; /* Förhindra "auto"-höjd som ger extra space */
   display: inline-flex; /* 👈 bättre kontroll på innehålls-centrering */
