--- a/index.html
+++ b/index.html
@@ -121,6 +121,26 @@ button {
       left: 50%;
       transform: translateX(-50%);
     }
+
+@media (max-width: 768px) {
+  .legal-text {
+    position: relative;
+    margin-bottom: 20px;
+    order: -1; /* flyttar legaltexten uppåt */
+    text-align: center;
+    padding: 0 20px;
+  }
+
+  .flower {
+    margin-top: 0;
+  }
+
+  .form-block {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
   </style>
 </head>
 <body>
