--- a/index.html
+++ b/index.html
@@ -140,7 +140,27 @@ button {
     align-items: center;
   }
 }
+@media (max-width: 768px) {
+  .form-block {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .legal-text {
+    order: -1;               /* Flyttar legaltexten högst upp i formblocket */
+    margin-bottom: 16px;     /* Ger lite luft mellan legaltext och input */
+    max-width: 260px;
+  }
+
+  .input-line {
+    font-size: 16px;
+    -webkit-text-size-adjust: 100%; /* Hindrar iOS-zoom */
+  }
+
+  .flower {
+    margin-top: 20px;
+  }
+}
   </style>
 </head>
 <body>
