--- a/index.html
+++ b/index.html
@@ -148,19 +148,10 @@ button {
   }
 
   #signup-info {
-    order: -1;               /* Flyttar legaltexten överst */
-    margin-bottom: 16px;     /* Luft mellan text och input */
+    order: -1;
+    margin-bottom: 16px;
     max-width: 260px;
     text-align: center;
-  }
-
-  .input-line {
-    font-size: 16px;
-    -webkit-text-size-adjust: 100%; /* Hindrar inzoomning */
-  }
-
-  .flower {
-    margin-top: 20px;
   }
 }
   </style>
