--- a/index.html
+++ b/index.html
@@ -123,24 +123,6 @@ button {
     }
 
 @media (max-width: 768px) {
-  .legal-text {
-    position: relative;
-    margin-bottom: 20px;
-    order: -1; /* flyttar legaltexten uppåt */
-    text-align: center;
-    padding: 0 20px;
-  }
-
-  .flower {
-    margin-top: 0;
-  }
-
-  .form-block {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media (max-width: 768px) {
   #signup-form-container {
     display: flex;
     flex-direction: column;
@@ -148,10 +130,19 @@ button {
   }
 
   #signup-info {
-    order: -1;
-    margin-bottom: 16px;
+    order: -1;               /* Flytta upp legaltexten */
+    margin-bottom: 16px;     /* Luft mellan legaltext och input */
     max-width: 260px;
     text-align: center;
+  }
+
+  .input-line {
+    font-size: 16px;
+    -webkit-text-size-adjust: 100%; /* Stoppar iOS-zoom */
+  }
+
+  .flower {
+    margin-top: 20px;
   }
 }
   </style>
