--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ button {
   }
 
   .flower {
-    margin-top: 60px;
+    margin-top: 20px;
   }
 }
   </style>
@@ -156,17 +156,20 @@ button {
     <div class="subhead">TUESDAY–WEDNESDAY</div>
   </div>
 
-  <div class="form-wrapper">
-    <form id="signup-form" action="https://formspree.io/f/xldjayre" method="POST">
-      <input type="email" name="email" class="input-line" required />
-      <button type="submit" id="submit-button">SIGN UP</button>
-    </form>
-    <div class="legal" id="signup-info">
-      By submitting this form, you consent to us processing your personal data to send you information about the event.
-      We will not keep your data longer than necessary.
-      <a href="https://docs.google.com/document/d/1Dte-DqgnydV6A6dxK7Ldg7Wn774N0YIbEcEmPN4XQq8/edit?usp=sharing" target="_blank">Learn more here</a>.
-    </div>
+<div class="form-wrapper">
+  <!-- ✅ Legaltext först i ordning – fungerar för mobil -->
+  <div class="legal" id="signup-info">
+    By submitting this form, you consent to us processing your personal data to send you information about the event.
+    We will not keep your data longer than necessary.
+    <a href="https://docs.google.com/document/d/1Dte–DqgnydV6A6dxK7Ldg7Wn774N0YIbEcEmPN4XQq8/edit?usp=sharing" target="_blank">Learn more here</a>.
   </div>
+
+  <!-- Själva formuläret -->
+  <form id="signup-form" action="https://formspree.io/f/xldjayre" method="POST">
+    <input type="email" name="email" class="input-line" required />
+    <button type="submit" id="submit-button">SIGN UP</button>
+  </form>
+</div>
 
   <img id="flower" src="Abby_flower.png" alt="Flower" />
 
