--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
+  <title>ABBY.WORLD Cannes 2025</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     @font-face {
@@ -152,7 +152,7 @@ button {
   <div class="top-info">
     <div>17  06  25</div>
     <div>ABBY.WORLD<br>7 RUE DE LA CALADE<br>CANNES</div>
-    <div class="main-title">ABBY.WORLD Cannes 2025</div>
+    <div class="main-title"></div>
     <div class="subhead">TUESDAY–WEDNESDAY</div>
   </div>
 
